Sorgente/.apex/src/objects/Ruolo_degli_Specialisti_Collaboratori__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit_del__c</fullName>
        <formula>Text(Opportunita__r.Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunita__c</fullName>
        <label>Opportunità</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ruoli degli Specialisti/Collaboratori</relationshipLabel>
        <relationshipName>Ruoli_degli_Specialisti_Collaboratori</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Referente__c</fullName>
        <label>Referente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Specialista</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ruoli degli Specialisti/Collaboratori</relationshipLabel>
        <relationshipName>Ruoli_degli_Specialisti_Collaboratori</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ruolo__c</fullName>
        <label>Ruolo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Specialista che consiglia</fullName>
                </value>
                <value>
                    <fullName>Specialista</fullName>
                </value>
                <value>
                    <fullName>Collaboratore che consiglia</fullName>
                </value>
                <value>
                    <fullName>Programma Amico</fullName>
                </value>
                <value>
                    <fullName>Operatore prelievo</fullName>
                </value>
                <value>
                    <fullName>Prescrittore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ruolo degli Specialisti/Collaboratori</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Nome Ruolo degli Specialisti/Collaborato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ruoli degli Specialisti/Collaboratori</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>